--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -5,18 +5,18 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 20px;
+    
     
 }
    
 .imgFormLogo {
-    margin-right: 20px;
+    
     img{
         width: 8rem;
         display: block;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
     }
         
 } 
@@ -38,10 +38,8 @@ section{
     background-image: url('../../../../assets/img/nn.png');
     background-repeat: no-repeat;
     border-radius: 10px;
-    width: 50%;
-    margin-left: 250px;
     padding-bottom: 30px;
-   
+    width: 300px;
 }
 .content-login{
   
