--- a/src/app/dasboard/pages/registration/registration.component.scss
+++ b/src/app/dasboard/pages/registration/registration.component.scss
@@ -1,5 +1,5 @@
 .FormuRegistro{
-    background-color: var(--principal-color);
+    background-color:#CAE3DB ;
     border-radius: 0.625rem;
     width: 700px;
     display: flex;
@@ -8,9 +8,8 @@
     padding-top: 20px;
     padding-bottom: 1.875rem;
     height: auto;
-    margin-left: 90px;
-    
-  
+    margin-left: auto;
+    margin-right: auto;
 }
 p{
     margin: 0rem;
@@ -78,7 +77,7 @@ h3{
     color: rgb(39, 39, 39);
     margin-top: 10px;
     margin-bottom: 40px;
-    margin-left: 90px;
+   
 }
 
 .btn-azul{
