--- a/src/app/dasboard/pages/registration/registration.component.html
+++ b/src/app/dasboard/pages/registration/registration.component.html
@@ -1,3 +1,4 @@
+<section class="content-register">
 <h3>Registro</h3>
 <div class="FormuRegistro">
   
@@ -57,3 +58,4 @@
       
     </form>
   </div>
+</section>
