--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,9 +18,7 @@ mat-sidenav{
   
   display: flex;
   flex-direction: column;
-  img{
-    border-radius: 100px;
-  }
+  
  .item{
    
    width: 100%;
@@ -48,8 +46,13 @@ mat-sidenav-container{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 98px);
+  height:auto;
   border-radius: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  img{
+    width: 100%;
+  }
 }
 .content-img-user{
   margin-top: 50px;
@@ -57,7 +60,10 @@ mat-sidenav-container{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+  img{
+    border-radius: 100px;
+ 
+  }
  
 }
 mat-divider{
@@ -70,4 +76,9 @@ mat-divider{
 }
 .logo{
   margin-right: 20px;
+}
+.img-fondo{
+  height: calc(100vh - 96px);
+  border-radius: 10px;
+  width: 99%;
 }
