--- a/src/app/dasboard/pages/registration/registration.component.scss
+++ b/src/app/dasboard/pages/registration/registration.component.scss
@@ -1,5 +1,5 @@
 .FormuRegistro{
-    background-color:#CAE3DB ;
+    background-color: #CAE3DB;
     border-radius: 0.625rem;
     width: 700px;
     display: flex;
@@ -10,6 +10,8 @@
     height: auto;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
+    border: 2px solid #b5cec6;
 }
 p{
     margin: 0rem;
@@ -77,7 +79,7 @@ h3{
     color: rgb(39, 39, 39);
     margin-top: 10px;
     margin-bottom: 40px;
-   
+    border: 2px solid #b5cec6;
 }
 
 .btn-azul{
